<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logger App</string>
    <string name="action_info">About</string>
    <string name="set">Set</string>
    <string name="sync">Sync</string>
    <string name="logger_connectToDevice">Connect to Device: </string>
    <string name="logger_switchOn">Connected</string>
    <string name="logger_switchOff">Disconnected</string>
    <string name="logger_saveData">Dump Data</string>
    <string name="logger_eraseData">Erase Data</string>
    <string name="logger_version">Version: </string>
    <string name="logger_name">Name: </string>
    <string name="logger_samplingint">Sampling Interval [sec]: </string>
    <string name="logger_currentdate">Current Date: </string>
    <string name="logger_dateOfNextFrame">Date of Next Frame: </string>
    <string name="logger_estimatedNewFrames">Estimated New Frames: </string>
    <string name="logger_eraseDialogue_eraseFrames">Are you sure you want to delete all data?</string>
    <string name="logger_eraseDialogue_confirm">OK</string>
    <string name="logger_eraseDialogue_cancel">Cancel</string>
    <string name="logger_eraseDialogue_eraseFramesTitle">Erase Logger Data</string>
    <string name="live_toggleStartLiveData">Start Live Mode</string>
    <string name="live_toggleStopLiveData">Stop Live Mode</string>
    <string name="dump_tbl_name">Logger</string>
    <string name="dump_tbl_start">Start</string>
    <string name="dump_tbl_end">End</string>
    <string name="dump_tbl_records">Records</string>
    <string name="dumps_refresh">Refresh Table</string>
    <string name="dumps_parseData">Convert to CSV</string>
    <string name="dumps_selectAll">Select All</string>
    <string name="dumps_deselectAll">Deselect All</string>
    <string name="dumps_delete">Delete</string>
    <string name="dumps_upload">Upload to Gateway</string>
    <string name="dumps_upload_cancel">Cancel</string>
    <string name="dumps_noDumps">No dumps found!</string>
    <string name="pref_host_default">https://bayconf.bayceer.uni-bayreuth.de</string>
    <string name="pref_path_default">/gateway/frame/saveFlat</string>
    <string name="pref_logging_disabled">Logging disabled</string>
    <string name="pref_logging_enabled">Logging enabled</string>
    <string name="pref_logging_title">Write log file?</string>
    <string name="info">This application was developed by Christiane Goehring within a Master\'\s degree project at the University of Bayreuth in 2015.</string>

</resources>