<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="3dp" >

        <View
            android:id="@+id/divider1"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/dumps_btn_parse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/divider1"
            android:layout_toStartOf="@id/divider1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/dumps_parseData"
            android:textAllCaps="false"
            android:textColor="#44b66e"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dumps_btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/divider1"
            android:layout_toRightOf="@id/divider1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/dumps_upload"
            android:textAllCaps="false"
            android:textColor="#44b66e"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/dumps_tblLinLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dumps_tv_noDumps"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/dumps_noDumps"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/dumps_tbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/dumps_headerTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:stretchColumns="0,1,2,3" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/dumps_tv_name"
                        android:layout_width="0dp"
                        android:background="@drawable/cell_head_shape"
                        android:gravity="center"
                        android:text="@string/dump_tbl_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dumps_tv_start"
                        android:layout_width="0dp"
                        android:background="@drawable/cell_head_shape"
                        android:gravity="center"
                        android:text="@string/dump_tbl_start"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dumps_tv_end"
                        android:layout_width="0dp"
                        android:background="@drawable/cell_head_shape"
                        android:gravity="center"
                        android:text="@string/dump_tbl_end"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dumps_tv_records"
                        android:layout_width="0dp"
                        android:background="@drawable/cell_head_shape"
                        android:gravity="center"
                        android:text="@string/dump_tbl_records"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:fadeScrollbars="false" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TableLayout
                        android:id="@+id/dumps_tbllayout_data"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="11dp"
                        android:stretchColumns="0,1,2,3" >
                    </TableLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="3dp" >

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/dumps_btn_refresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dumps_refresh"
                android:textAllCaps="false"
                android:textColor="#44b66e"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/dumps_btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dumps_delete"
                android:textAllCaps="false"
                android:textColor="#44b66e"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/dumps_selectAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dumps_selectAll"
                android:textAllCaps="false"
                android:textColor="#44b66e"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>